[package]
name = "vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytemuck = { version = "1.12.1", features = ["bytemuck_derive"] }
image = "0.24.4"
lazy_static = "1.4.0"
log = "0.4.17"
nalgebra-glm = "0.17.0"
png = "0.17.6"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
tobj = "3.2.3"
vulkano = "0.31.1"
vulkano-shaders = "0.31.1"
vulkano-win = "0.31.0"
winit = "0.27.4"
